--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cd ../../packages/database && pnpm prisma generate && cd ../../apps/web && next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
@@ -14,6 +14,7 @@
     "@ecomm-burkina/database": "workspace:*",
     "@ecomm-burkina/ui": "workspace:*",
     "@hookform/resolvers": "^3.9.1",
+    "@next/swc": "^15.1.6",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
